--- a/src/scss/Header.scss
+++ b/src/scss/Header.scss
@@ -49,8 +49,12 @@
 .brand-title {
   font-weight: bold;
   font-size: 1.25rem;
-  color: #fff;
+  color: #222;
   transition: color 0.3s;
+}
+
+.dark .brand-title {
+  color: #fff;
 }
 
 .brand-title.scrolled {
