--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -18,6 +18,8 @@
 @use 'QuoteCalculator';
 @use 'Legal';
 @use 'AnimatedBackground';
+@use 'CaseStudy';
+@use 'Blog';
 
 /* CSS Reset and Global Styles */
 html, body {
