--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -20,6 +20,7 @@
 @use 'AnimatedBackground';
 @use 'CaseStudy';
 @use 'Blog';
+@use 'Nosotros';
 
 /* CSS Reset and Global Styles */
 html, body {
@@ -87,3 +88,5 @@ main {
 :root {
   --font-sans: 'Poppins', sans-serif;
 }
+
+// Media queries for responsiveness
